--- a/themes/default/source/stylesheets/base/_fontface.scss
+++ b/themes/default/source/stylesheets/base/_fontface.scss
@@ -1,10 +1,43 @@
 /**
- * Regular
+ * Thin
  */
-// @font-face {
-//   font-family: 'Nunito';
-//   font-style: normal;
-//   font-weight: 600;
-//   src: local('Nunito SemiBold'), local('Nunito-SemiBold'), url(https://fonts.gstatic.com/s/nunito/v9/XRXW3I6Li01BKofA6sKUYevIWzgPDA.woff2) format('woff2');
-//   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-// }
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 100;
+  src: url('../fonts/proxima-nova-thin.woff2') format('woff2'),
+    url('../fonts/proxima-nova-thin.woff') format('woff');
+}
+
+/**
+ * Light
+ */
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  src: url('../fonts/proxima-nova-light.woff2') format('woff2'),
+    url('../fonts/proxima-nova-light.woff') format('woff');
+  font-weight: 300;
+}
+
+/**
+ * Semibold
+ */
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  src: url('../fonts/proxima-nova-semibold.woff2') format('woff2'),
+    url('../fonts/proxima-nova-semibold.woff') format('woff');
+  font-weight: 600;
+}
+
+/**
+ * Extrabold
+ */
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  src: url('../fonts/proxima-nova-extrabold.woff2') format('woff2'),
+    url('../fonts/proxima-nova-extrabold.woff') format('woff');
+  font-weight: 800;
+}
